# Grokker

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
backend/: README.md  api_testing_notebook.ipynb  compose.yaml  langgraph.json  pyproject.toml
backend/docker/: Dockerfile.service
backend/src/: checkpoints.db  run_service.py  sample_out.txt
backend/src/agent/: __init__.py  maybe_office_assistant.py  research_assistant_the_second.py  tests.http  tools.py
backend/src/agents/grokker/: multiagent_graph_coder_v1.py  multiagent_graph_v2.py
backend/src/agents/grokker/system_prompts/: agents_prompts.yaml
backend/src/agents/grokker/tools/: ranking_ejecutivos.py  registros_disponibles.py  reporte_detallado_por_ejecutivo.py  reporte_general_de_oficinas.py
backend/src/client/: client.py
backend/src/service/: app_insights.py  service.py
backend/src/tooling/: __init__.py  db_instance.py  pure_fcns.py  report_stats.py  utilities.py
backend/src/tooling/executives/: tool_average_executive_series.py  tool_brand_new_tool.py  tool_consolidated_executive_performance.py  tool_daily_atentions_by_executive.py  tool_daily_status_times.py  tool_executive_daily_performance.py  tool_executive_info.py  tool_executive_ranking.py
backend/src/tooling/offices/: __init__.py  tool_abandoned_calls.py  tool_active_offices.py  tool_current_office_stats.py  tool_daily_office_stats.py  tool_daily_office_stats_by_series.py  tool_sla_by_hour_and_series.py
backend/src/tooling/real_time/: __init__.py  tool_connected_executives.py
frontend/: Dockerfile  TODO.md  bun.lockb  package-lock.json  package.json  response.json  tailwind.config.ts
lgraph-essentials/: graph_basics.py  llm.py  tools.py
(+95 files in other folders)
